tests/native/lowering/corpus/rejected/arrays.php
<?php

function w03_rejected_arrays(): array
{
    return [1, 2, 3];
}

echo implode(",", w03_rejected_arrays()), "\n";
